ex4/testdata/typechecker/error/UnopTest-err.java
class UnopTest {
	public static void main(String[] a){
            boolean b;
            b = !5; // TE
	}
}

